--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a package to send sms",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/mocha/bin/_mocha test/test.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,10 @@
   },
   "homepage": "https://github.com/yunheli/china-sms",
   "dependencies": {
+    "mocha": "^2.2.5",
     "request": "~2.57.0"
+  },
+  "devDependencies": {
+    "should": "^7.0.2"
   }
 }
