--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ node_js:
 - '0.11'
 - '0.10'
 env:
-- ARTIFACTS_KEY=AKIAOCMZ67QT4IJBQUMQ
-- ARTIFACTS_SECRET=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
-- ARTIFACTS_BUCKET=flow-file
+- ARTIFACTS_KEY="AKIAOCMZ67QT4IJBQUMQ"
+- ARTIFACTS_SECRET="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"
+- ARTIFACTS_BUCKET="flow-file"
 script:
 - echo $FLOW
 addons:
